--- a/android/CanoeForTwo/app/src/main/res/layout/activity_connect_menu.xml
+++ b/android/CanoeForTwo/app/src/main/res/layout/activity_connect_menu.xml
@@ -6,44 +6,66 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="com.example.duarte.canoefortwo.ConnectMenu">
 
-    <FrameLayout android:layout_width="match_parent" android:layout_height="match_parent"
-        android:fitsSystemWindows="true">
+    <LinearLayout android:id="@+id/fullscreen_content_controls" style="?metaButtonBarStyle"
+        android:layout_width="match_parent" android:layout_height="wrap_content"
+        android:layout_gravity="bottom|center_horizontal"
+        android:background="@color/black_overlay" android:orientation="horizontal"
+        tools:ignore="UselessParent">
 
-        <LinearLayout android:id="@+id/fullscreen_content_controls" style="?metaButtonBarStyle"
-            android:layout_width="match_parent" android:layout_height="wrap_content"
-            android:layout_gravity="bottom|center_horizontal"
-            android:background="@color/black_overlay" android:orientation="horizontal"
-            tools:ignore="UselessParent">
+    </LinearLayout>
 
-        </LinearLayout>
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center">
 
-        <LinearLayout
-            android:orientation="vertical"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center">
+    </LinearLayout>
 
-            <EditText
-                android:layout_width="216dp"
-                android:layout_height="43dp"
-                android:id="@+id/ipTextField"
-                android:layout_gravity="top|center_horizontal"
-                android:background="@drawable/abc_textfield_default_mtrl_alpha"
-                android:autoText="false"
-                android:textColor="@color/abc_primary_text_disable_only_material_light"
-                android:editable="true"
-                android:inputType="phone" />
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Connect"
+        android:id="@+id/connectButton"
+        android:layout_gravity="top|bottom|center_horizontal"
+        android:clickable="true"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true" />
 
-            <Button
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Connect"
-                android:id="@+id/connectButton"
-                android:layout_gravity="top|bottom|center_horizontal"
-                android:clickable="true" />
-        </LinearLayout>
+    <EditText
+        android:layout_width="216dp"
+        android:layout_height="43dp"
+        android:id="@+id/ipTextField"
+        android:layout_gravity="top|center_horizontal"
+        android:background="@drawable/abc_textfield_default_mtrl_alpha"
+        android:autoText="false"
+        android:textColor="@color/abc_primary_text_disable_only_material_light"
+        android:editable="true"
+        android:inputType="phone"
+        android:textAlignment="center"
+        android:layout_above="@+id/connectButton"
+        android:layout_centerHorizontal="true" />
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="Enter IP"
+        android:id="@+id/textTestIP"
+        android:layout_alignBottom="@+id/ipTextField"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="43dp"
+        android:textColor="#000000" />
 
-    </FrameLayout>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="Invalid IP format"
+        android:id="@+id/errorTextField"
+        android:layout_below="@+id/connectButton"
+        android:layout_centerHorizontal="true"
+        android:visibility="invisible"
+        android:textColor="#ffff0000" />
 
 </RelativeLayout>
