--- a/android/CanoeForTwo/app/src/main/res/layout/activity_choose_side.xml
+++ b/android/CanoeForTwo/app/src/main/res/layout/activity_choose_side.xml
@@ -1,4 +1,4 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
@@ -13,17 +13,23 @@
         android:text="Back"
         android:id="@+id/backButton"
         android:layout_gravity="right|bottom"
-        android:layout_marginRight="20dp"
-        android:layout_marginBottom="20dp"
         style="@style/Widget.AppCompat.Button"
         android:background="#F80000"
-        android:textColor="#FFFFFF" />
+        android:textColor="#FFFFFF"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
 
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center">
+        android:layout_gravity="center"
+        android:baselineAligned="false"
+        android:id="@+id/linearLayout2"
+        android:layout_centerVertical="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true">
 
         <ImageButton
             android:layout_width="150dp"
@@ -52,16 +58,26 @@
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="247dp">
+        android:layout_height="247dp"
+        android:id="@+id/linearLayout"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:weightSum="1"
+        android:gravity="top"
+        android:layout_alignBottom="@+id/linearLayout2">
 
         <TextView
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="107dp"
             android:text="Choose a Side"
             android:id="@+id/textView"
             android:textSize="70dp"
-            android:gravity="center_vertical|center_horizontal"
-            android:textColor="#000000" />
+            android:gravity="top|center_horizontal"
+            android:textColor="#000000"
+            android:layout_weight="0.38" />
     </LinearLayout>
 
-</FrameLayout>
+</RelativeLayout>
