--- a/android/CanoeForTwo/app/src/main/res/layout/activity_connect_menu.xml
+++ b/android/CanoeForTwo/app/src/main/res/layout/activity_connect_menu.xml
@@ -4,68 +4,107 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.example.duarte.canoefortwo.ConnectMenu">
+    tools:context="com.example.duarte.canoefortwo.ConnectMenu"
+    android:orientation="vertical"
+    android:weightSum="1">
 
-    <LinearLayout android:id="@+id/fullscreen_content_controls" style="?metaButtonBarStyle"
-        android:layout_width="match_parent" android:layout_height="wrap_content"
-        android:layout_gravity="bottom|center_horizontal"
-        android:background="@color/black_overlay" android:orientation="horizontal"
-        tools:ignore="UselessParent">
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_weight="0.23">
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="CanoeForTwo"
+            android:id="@+id/textView2"
+            android:textSize="50dp"
+            android:textAlignment="center"
+            android:layout_below="@+id/errorTextField"
+            android:layout_centerHorizontal="true"
+            android:layout_gravity="center" />
+    </FrameLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="#00000000"
+        android:backgroundTint="#00000000"
+        android:layout_above="@+id/linearLayout3"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:orientation="vertical">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="Enter IP"
+            android:id="@+id/textTestIP"
+            android:layout_alignBottom="@+id/ipTextField"
+            android:layout_centerHorizontal="true"
+            android:layout_marginBottom="10dp"
+            android:textColor="#000000"
+            android:layout_gravity="center" />
+
+        <EditText
+            android:layout_width="216dp"
+            android:layout_height="43dp"
+            android:id="@+id/ipTextField"
+            android:layout_gravity="center"
+            android:background="@drawable/abc_textfield_default_mtrl_alpha"
+            android:autoText="false"
+            android:textColor="@color/abc_primary_text_disable_only_material_light"
+            android:editable="true"
+            android:inputType="phone"
+            android:textAlignment="center"
+            android:layout_marginTop="0dp"
+            android:layout_below="@+id/textView2"
+            android:layout_centerHorizontal="true" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:text="Invalid IP format"
+            android:id="@+id/errorTextField"
+            android:layout_centerHorizontal="true"
+            android:visibility="invisible"
+            android:textColor="#ffff0000"
+            android:layout_gravity="bottom|center_horizontal" />
     </LinearLayout>
 
     <LinearLayout
         android:orientation="vertical"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center">
-
-    </LinearLayout>
-
-    <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Connect"
-        android:id="@+id/connectButton"
-        android:layout_gravity="top|bottom|center_horizontal"
-        android:clickable="true"
+        android:layout_gravity="bottom|center_horizontal"
         android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true" />
-
-    <EditText
-        android:layout_width="216dp"
-        android:layout_height="43dp"
-        android:id="@+id/ipTextField"
-        android:layout_gravity="top|center_horizontal"
-        android:background="@drawable/abc_textfield_default_mtrl_alpha"
-        android:autoText="false"
-        android:textColor="@color/abc_primary_text_disable_only_material_light"
-        android:editable="true"
-        android:inputType="phone"
-        android:textAlignment="center"
-        android:layout_above="@+id/connectButton"
-        android:layout_centerHorizontal="true" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="Enter IP"
-        android:id="@+id/textTestIP"
-        android:layout_alignBottom="@+id/ipTextField"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="43dp"
-        android:textColor="#000000" />
+        android:id="@+id/linearLayout3">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceSmall"
-        android:text="Invalid IP format"
-        android:id="@+id/errorTextField"
-        android:layout_below="@+id/connectButton"
-        android:layout_centerHorizontal="true"
-        android:visibility="invisible"
-        android:textColor="#ffff0000" />
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Connect"
+            android:id="@+id/connectButton"
+            android:layout_gravity="top|center_horizontal"
+            android:clickable="true"
+            android:layout_below="@+id/textView2"
+            android:layout_alignLeft="@+id/QRbutton"
+            android:layout_alignStart="@+id/QRbutton"
+            android:layout_marginTop="20dp" />
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="QR CODE"
+            android:id="@+id/QRbutton"
+            android:layout_marginTop="10dp"
+            android:layout_below="@+id/errorTextField"
+            android:layout_centerHorizontal="true"
+            android:layout_marginBottom="10dp" />
+    </LinearLayout>
 
 </RelativeLayout>
