--- a/android/CanoeForTwo/app/src/main/res/layout/activity_play.xml
+++ b/android/CanoeForTwo/app/src/main/res/layout/activity_play.xml
@@ -41,9 +41,8 @@
                 android:src="@drawable/button_stroke_states"
                 android:scaleType="fitCenter"
                 android:layout_gravity="center_horizontal"
-                android:background="#00000000"
                 android:clickable="true"
-                />
+                android:background="#00000000" />
 
             <RelativeLayout
                 android:layout_width="fill_parent"
