--- a/android/CanoeForTwo/app/src/main/res/layout/activity_choose_side.xml
+++ b/android/CanoeForTwo/app/src/main/res/layout/activity_choose_side.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         android:text="Back"
         android:id="@+id/backButton"
-        android:layout_gravity="right|bottom"
+        android:layout_gravity="end|bottom"
         style="@style/Widget.AppCompat.Button"
         android:background="#F80000"
         android:textColor="#FFFFFF"
@@ -74,7 +74,7 @@
             android:layout_height="107dp"
             android:text="Choose a Side"
             android:id="@+id/textView"
-            android:textSize="70dp"
+            android:textSize="70sp"
             android:gravity="top|center_horizontal"
             android:textColor="#000000"
             android:layout_weight="0.38" />
