--- a/android/CanoeForTwo/app/src/main/res/layout/activity_connect_menu.xml
+++ b/android/CanoeForTwo/app/src/main/res/layout/activity_connect_menu.xml
@@ -6,23 +6,24 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="com.example.duarte.canoefortwo.ConnectMenu"
     android:orientation="vertical"
-    android:weightSum="1">
+    android:weightSum="1"
+    android:id="@+id/activity_connect_menu">
+
+    <LinearLayout
+        android:focusable="true" android:focusableInTouchMode="true"
+        android:layout_width="0px" android:layout_height="0px"/>
 
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:layout_weight="0.23">
+        android:layout_gravity="center_horizontal">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="CanoeForTwo"
+            android:text="@string/app_name"
             android:id="@+id/textView2"
-            android:textSize="50dp"
-            android:textAlignment="center"
-            android:layout_below="@+id/errorTextField"
-            android:layout_centerHorizontal="true"
+            android:textSize="50sp"
             android:layout_gravity="center" />
     </FrameLayout>
 
@@ -30,7 +31,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="#00000000"
-        android:backgroundTint="#00000000"
         android:layout_above="@+id/linearLayout3"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
@@ -42,8 +42,6 @@
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:text="Enter IP"
             android:id="@+id/textTestIP"
-            android:layout_alignBottom="@+id/ipTextField"
-            android:layout_centerHorizontal="true"
             android:layout_marginBottom="10dp"
             android:textColor="#000000"
             android:layout_gravity="center" />
@@ -53,15 +51,11 @@
             android:layout_height="43dp"
             android:id="@+id/ipTextField"
             android:layout_gravity="center"
-            android:background="@drawable/abc_textfield_default_mtrl_alpha"
-            android:autoText="false"
-            android:textColor="@color/abc_primary_text_disable_only_material_light"
-            android:editable="true"
+            android:background="@drawable/abc_textfield_activated_mtrl_alpha"
+            android:textColor="@color/abc_primary_text_material_light"
             android:inputType="phone"
-            android:textAlignment="center"
             android:layout_marginTop="0dp"
-            android:layout_below="@+id/textView2"
-            android:layout_centerHorizontal="true" />
+            android:nextFocusUp="@id/ipTextField" android:nextFocusLeft="@id/ipTextField"/>
 
         <TextView
             android:layout_width="wrap_content"
@@ -69,7 +63,6 @@
             android:textAppearance="?android:attr/textAppearanceSmall"
             android:text="Invalid IP format"
             android:id="@+id/errorTextField"
-            android:layout_centerHorizontal="true"
             android:visibility="invisible"
             android:textColor="#ffff0000"
             android:layout_gravity="bottom|center_horizontal" />
@@ -91,9 +84,6 @@
             android:id="@+id/connectButton"
             android:layout_gravity="top|center_horizontal"
             android:clickable="true"
-            android:layout_below="@+id/textView2"
-            android:layout_alignLeft="@+id/QRbutton"
-            android:layout_alignStart="@+id/QRbutton"
             android:layout_marginTop="20dp" />
 
         <Button
@@ -102,9 +92,7 @@
             android:text="QR CODE"
             android:id="@+id/QRbutton"
             android:layout_marginTop="10dp"
-            android:layout_below="@+id/errorTextField"
-            android:layout_centerHorizontal="true"
             android:layout_marginBottom="10dp" />
     </LinearLayout>
-
+    
 </RelativeLayout>
