--- a/android/CanoeForTwo/app/src/main/res/layout/activity_choose_side.xml
+++ b/android/CanoeForTwo/app/src/main/res/layout/activity_choose_side.xml
@@ -5,7 +5,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:background="#3399CC"
-    tools:context="com.example.duarte.canoefortwo.ChooseSide">
+    tools:context="com.example.duarte.canoefortwo.menus.ChooseSide">
 
     <Button
         android:layout_width="wrap_content"
