--- a/android/CanoeForTwo/app/src/main/res/layout/activity_play.xml
+++ b/android/CanoeForTwo/app/src/main/res/layout/activity_play.xml
@@ -1,7 +1,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent" android:background="@color/material_blue_grey_800"
-    tools:context="com.example.duarte.canoefortwo.PlayActivity"
+    tools:context="com.example.duarte.canoefortwo.menus.PlayActivity"
     android:id="@+id/activity_play"
     android:orientation="vertical"
     android:focusableInTouchMode="false"
